--- a/iteracion_01/index.html
+++ b/iteracion_01/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 </head>
 
@@ -22,6 +23,7 @@
     <span data-function="testMe">Robin</span>
     <span data-function="testMe">Rick</span>
     <span data-function="testMe">Morty</span>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 
 </html>
