--- a/iteracion_02/index.html
+++ b/iteracion_02/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="app.js" defer> </script>
     <title>Document</title>
 </head>
 
@@ -21,6 +22,7 @@
     <div></div>
     <div class="fn-insert-here"></div>
     <div class="fn-insert-here"></div>
+
 </body>
 
 </html>
